--- a/pub/cfmem.yaml
+++ b/pub/cfmem.yaml
@@ -21,12 +21,72 @@ proxies:
       headers:
         host: food.zhaal.ir
   - &id002
-    name: 🇺🇸_US_美国_1
+    name: 🇺🇸_US_美国->🇨🇦_CA_加拿大_1
     type: vmess
-    server: www.velvetmountain.shop
+    server: yh3.freeh1.xyz
     port: 8080
     cipher: auto
-    uuid: 22826b44-5c1a-4b4b-dbaa-83a2e8bd95f0
+    uuid: 82cb93a3-65a9-4dac-a2a7-d997b6c26d6a
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: 82cb93a3-65a9-4dac-a2a7-d997b6c26d6a-vm
+      headers:
+        host: larger-marketing-amounts-skin.trycloudflare.com
+  - &id003
+    name: 🇺🇸_US_美国->🇨🇦_CA_加拿大_2
+    type: vmess
+    server: yh1.freeh1.xyz
+    port: 8080
+    cipher: auto
+    uuid: 82cb93a3-65a9-4dac-a2a7-d997b6c26d6a
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: 82cb93a3-65a9-4dac-a2a7-d997b6c26d6a-vm
+      headers:
+        host: larger-marketing-amounts-skin.trycloudflare.com
+  - &id004
+    name: 🇺🇸_US_美国->🇨🇦_CA_加拿大_3
+    type: vmess
+    server: fbi.gov
+    port: 8080
+    cipher: auto
+    uuid: ef8c954e-014f-4b36-8273-9b5086afab34
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: ef8c954e-014f-4b36-8273-9b5086afab34-vm
+      headers:
+        host: bibliographic-sword-sequence-advertisers.trycloudflare.com
+  - &id005
+    name: 🇨🇦_CA_加拿大
+    type: vmess
+    server: 23.227.38.23
+    port: 8080
+    cipher: auto
+    uuid: 34c0bb5e-c120-432d-9c58-bd7d82c7397b
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: 34c0bb5e-c120-432d-9c58-bd7d82c7397b-vm
+      headers:
+        host: uh-lawyers-instruments-kernel.trycloudflare.com
+  - &id006
+    name: 🇺🇸_US_美国_1
+    type: vmess
+    server: 172.67.130.140
+    port: 2082
+    cipher: auto
+    uuid: 112ac36f-3f53-4e26-8371-d25c028e1b9a
     alterId: 0
     tls: false
     skip-cert-verify: true
@@ -34,63 +94,128 @@ proxies:
     ws-opts:
       path: /
       headers:
-        host: www.velvetmountain.shop
-  - &id003
-    name: 🇺🇸_US_美国->🇮🇹_IT_意大利
+        host: s1c.v2.v001sss.xyz
+  - &id007
+    name: 🇨🇦_CA_加拿大->🇺🇸_US_美国_1
     type: vmess
-    server: frcc.digicert.pp.ua
-    port: 2052
+    server: 23.227.38.22
+    port: 8080
     cipher: auto
-    uuid: 5cc3a871-6eeb-4b87-b4e4-4f2611eb5441
+    uuid: 9258153a-dc97-4e39-9037-009abfc4fed0
     alterId: 0
     tls: false
     skip-cert-verify: true
     network: ws
     ws-opts:
-      path: /apopsdsssaop
+      path: 9258153a-dc97-4e39-9037-009abfc4fed0-vm
       headers:
-        host: asdfas.qkhbyf.tech
-  - &id004
+        host: per-essex-patterns-bowling.trycloudflare.com
+  - &id008
+    name: 🇺🇸_US_美国_2
+    type: vmess
+    server: yh1.dtku41.xyz
+    port: 8080
+    cipher: auto
+    uuid: 9258153a-dc97-4e39-9037-009abfc4fed0
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: 9258153a-dc97-4e39-9037-009abfc4fed0-vm
+      headers:
+        host: per-essex-patterns-bowling.trycloudflare.com
+  - &id009
+    name: 🇺🇸_US_美国_3
+    type: vmess
+    server: yh2.dtku41.xyz
+    port: 8080
+    cipher: auto
+    uuid: 9258153a-dc97-4e39-9037-009abfc4fed0
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: 9258153a-dc97-4e39-9037-009abfc4fed0-vm
+      headers:
+        host: per-essex-patterns-bowling.trycloudflare.com
+  - &id010
+    name: 🇺🇸_US_美国_4
+    type: vmess
+    server: yh2.freeh1.xyz
+    port: 8080
+    cipher: auto
+    uuid: d9c5ec6a-a8d8-4732-8447-56fbd2f93e96
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: d9c5ec6a-a8d8-4732-8447-56fbd2f93e96-vm
+      headers:
+        host: pcs-referenced-camera-concerns.trycloudflare.com
+  - &id011
+    name: 🇺🇸_US_美国->🇨🇦_CA_加拿大_4
+    type: vmess
+    server: 162.159.1.33
+    port: 8080
+    cipher: auto
+    uuid: d9c5ec6a-a8d8-4732-8447-56fbd2f93e96
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: d9c5ec6a-a8d8-4732-8447-56fbd2f93e96-vm
+      headers:
+        host: pcs-referenced-camera-concerns.trycloudflare.com
+  - &id012
+    name: 🇺🇸_US_美国_5
+    type: vmess
+    server: 162.159.130.208
+    port: 8080
+    cipher: auto
+    uuid: 55021a7c-bd6c-418e-be95-ceac8ba27b45
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: 55021a7c-bd6c-418e-be95-ceac8ba27b45-vm
+      headers:
+        host: widescreen-instruction-breakdown-postage.trycloudflare.com
+  - &id013
+    name: 🇨🇦_CA_加拿大->🇺🇸_US_美国_2
+    type: trojan
+    server: 23.227.38.11
+    port: 443
+    udp: true
+    password: b17fa17d-13a0-4e8a-a398-8e549ea8b208
+    sni: syndication-statutes-wanted-logo.trycloudflare.com
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /argox-tr
+  - &id014
     name: 🇮🇪_IE_爱尔兰
     type: trojan
-    server: 34.243.1.59
+    server: 99.81.225.4
     port: 22222
     udp: true
-    password: telegram-id-directvpn
+    password: telegram-id-privatevpns
     sni: trojan.miwan.co.uk
     skip-cert-verify: true
     network: tcp
     alpn:
       - http/1.1
-  - &id005
-    name: 🇦🇷_AR_阿根廷
-    type: ss
-    server: 190.103.176.29
-    port: 989
-    password: f8f7aCzcPKbsF8p3
-    cipher: aes-256-cfb
-  - &id006
-    name: 🇺🇸_US_美国->🇮🇳_IN_印度_1
+  - &id015
+    name: 🇺🇸_US_美国_6
     type: vmess
-    server: www.visa.co.jp
-    port: 8080
-    cipher: auto
-    uuid: e184e964-518c-4ddf-ab05-f0a2ecff2f42
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: ydmmamd1.mac2win.top
-  - &id007
-    name: 🇺🇸_US_美国->🇮🇳_IN_印度_2
-    type: vmess
-    server: www.visa.com.hk
+    server: cloudflare.cfgo.cc
     port: 80
     cipher: auto
-    uuid: e184e964-518c-4ddf-ab05-f0a2ecff2f42
+    uuid: 22a13aa2-4854-44cb-e090-ec71ab84b1ff
     alterId: 0
     tls: false
     skip-cert-verify: true
@@ -98,9 +223,9 @@ proxies:
     ws-opts:
       path: /
       headers:
-        host: ydmmamd2.mac2win.top
-  - &id008
-    name: 🇺🇸_US_美国_2
+        host: wap.hostmjj.com
+  - &id016
+    name: 🇺🇸_US_美国_7
     type: vmess
     server: 104.21.54.252
     port: 8080
@@ -114,15 +239,38 @@ proxies:
       path: /
       headers:
         host: www.velvetmountain.shop
-  - &id009
-    name: 🇺🇸_US_美国_3
-    type: ss
-    server: 138.124.184.209
-    port: 32955
-    password: s2S9dyaGAPRY0N3LYz838G
-    cipher: chacha20-ietf-poly1305
-  - &id010
-    name: 🇺🇸_US_美国_4
+  - &id017
+    name: 🇺🇸_US_美国_8
+    type: vmess
+    server: 162.159.134.23
+    port: 8080
+    cipher: auto
+    uuid: 9b196b50-37f2-4f4b-b175-06273adc6207
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: 9b196b50-37f2-4f4b-b175-06273adc6207-vm
+      headers:
+        host: championship-bidding-oxygen-brochure.trycloudflare.com
+  - &id018
+    name: 🇺🇸_US_美国->🇩🇪_DE_德国
+    type: vmess
+    server: de-01.cloudlion.me
+    port: 8080
+    cipher: auto
+    uuid: 70666776-4e9f-4350-b3f0-afaff6a70db0
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: de-01.cloudlion.me
+  - &id019
+    name: 🇺🇸_US_美国_9
     type: vmess
     server: 172.67.143.192
     port: 8080
@@ -136,32 +284,21 @@ proxies:
       path: /
       headers:
         host: www.velvetmountain.shop
-  - &id011
-    name: 🇺🇸_US_美国->🇷🇺_RU_俄罗斯联邦
-    type: trojan
-    server: 172.67.132.6
-    port: 2096
-    udp: true
-    password: 7b06d62b-25ed-45ed-ac0d-bc28a4779ef9
-    sni: channel.v2bamdad.tech
+  - &id020
+    name: 🇺🇸_US_美国_10
+    type: vmess
+    server: www.velvetmountain.shop
+    port: 8080
+    cipher: auto
+    uuid: 22826b44-5c1a-4b4b-dbaa-83a2e8bd95f0
+    alterId: 0
+    tls: false
     skip-cert-verify: true
-    network: grpc
-    grpc-opts:
-      grpc-service-name: lK1wclmJRbMxj4FxIzvwxUDoX
-    alpn:
-      - h2
-  - &id012
-    name: 🇨🇦_CA_加拿大
-    type: trojan
-    server: 15.157.113.141
-    port: 22222
-    udp: true
-    password: telegram-id-directvpn
-    sni: trojan.miwan.co.uk
-    skip-cert-verify: true
-    network: tcp
-    alpn:
-      - http/1.1
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: www.velvetmountain.shop
 proxy-groups:
   - name: PROXY
     type: select
@@ -200,6 +337,14 @@ proxy-groups:
       - *id010
       - *id011
       - *id012
+      - *id013
+      - *id014
+      - *id015
+      - *id016
+      - *id017
+      - *id018
+      - *id019
+      - *id020
   - name: LOAD-BALANCE
     type: load-balance
     url: http://www.gstatic.com/generate_204
@@ -217,6 +362,14 @@ proxy-groups:
       - *id010
       - *id011
       - *id012
+      - *id013
+      - *id014
+      - *id015
+      - *id016
+      - *id017
+      - *id018
+      - *id019
+      - *id020
   - name: SELECT
     type: select
     proxies:
@@ -232,6 +385,14 @@ proxy-groups:
       - *id010
       - *id011
       - *id012
+      - *id013
+      - *id014
+      - *id015
+      - *id016
+      - *id017
+      - *id018
+      - *id019
+      - *id020
 rules:
   - RULE-SET,applications,DIRECT
   - DOMAIN,clash.razord.top,DIRECT
