--- a/pub/wefound.yaml
+++ b/pub/wefound.yaml
@@ -8,7 +8,7 @@ proxies:
   - &id001
     name: 🇺🇸_US_美国_1
     type: vmess
-    server: 172.67.143.192
+    server: www.velvetmountain.shop
     port: 8080
     cipher: auto
     uuid: 22826b44-5c1a-4b4b-dbaa-83a2e8bd95f0
@@ -21,96 +21,9 @@ proxies:
       headers:
         host: www.velvetmountain.shop
   - &id002
-    name: 🇨🇦_CA_加拿大->🇺🇸_US_美国_1
+    name: 🇺🇸_US_美国->🇩🇪_DE_德国_1
     type: vmess
-    server: 23.227.38.11
-    port: 8080
-    cipher: auto
-    uuid: 4a5ae806-ee72-473a-83b2-531808f454d5
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: 4a5ae806-ee72-473a-83b2-531808f454d5-vm
-      headers:
-        host: championship-bidding-oxygen-brochure.trycloudflare.com
-  - &id003
-    name: 🇨🇦_CA_加拿大
-    type: vmess
-    server: 23.227.38.22
-    port: 8080
-    cipher: auto
-    uuid: e9d23b60-6e44-45a2-b24f-c8521c04c310
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: e9d23b60-6e44-45a2-b24f-c8521c04c310-vm
-      headers:
-        host: per-essex-patterns-bowling.trycloudflare.com
-  - &id004
-    name: 🇺🇸_US_美国_2
-    type: vmess
-    server: 172.67.130.140
-    port: 2082
-    cipher: auto
-    uuid: 112ac36f-3f53-4e26-8371-d25c028e1b9a
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: s1c.v2.v001sss.xyz
-  - &id005
-    name: 🇺🇸_US_美国_3
-    type: vmess
-    server: us-01.cococloud.online
-    port: 2082
-    cipher: auto
-    uuid: 23337bcf-ea22-4efe-a0bc-8be84706c8bd
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: us-01.cococloud.online
-  - &id006
-    name: 🇨🇦_CA_加拿大->🇺🇸_US_美国_2
-    type: trojan
-    server: 23.227.38.11
-    port: 443
-    udp: true
-    password: b17fa17d-13a0-4e8a-a398-8e549ea8b208
-    sni: syndication-statutes-wanted-logo.trycloudflare.com
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /argox-tr
-  - &id007
-    name: 🇷🇺_RU_俄罗斯联邦
-    type: vmess
-    server: 176.120.74.142
-    port: 443
-    cipher: auto
-    uuid: 75695f5a-b6af-44f4-9983-ae250b53ff9c
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: internet.life.com.by
-  - &id008
-    name: 🇺🇸_US_美国->🇩🇪_DE_德国
-    type: vmess
-    server: de-01.cloudlion.me
+    server: 172.67.169.158
     port: 8080
     cipher: auto
     uuid: 70666776-4e9f-4350-b3f0-afaff6a70db0
@@ -121,9 +34,9 @@ proxies:
     ws-opts:
       path: /
       headers:
-        host: de-01.cloudlion.me
-  - &id009
-    name: 🇦🇪_AE_阿联酋->🇫🇷_FR_法国
+        host: fr-01.cloudlion.me
+  - &id003
+    name: 🇦🇪_AE_阿联酋->🇬🇧_GB_英国
     type: vmess
     server: 94.140.0.110
     port: 8880
@@ -137,13 +50,28 @@ proxies:
       path: /
       headers:
         host: food.zhaal.ir
-  - &id010
-    name: 🇺🇸_US_美国_4
+  - &id004
+    name: 🇺🇸_US_美国_2
     type: vmess
-    server: www.velvetmountain.shop
+    server: yh2.dtku41.xyz
     port: 8080
     cipher: auto
-    uuid: 22826b44-5c1a-4b4b-dbaa-83a2e8bd95f0
+    uuid: 9b196b50-37f2-4f4b-b175-06273adc6207
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: 9b196b50-37f2-4f4b-b175-06273adc6207-vm
+      headers:
+        host: championship-bidding-oxygen-brochure.trycloudflare.com
+  - &id005
+    name: 🇺🇸_US_美国->🇫🇷_FR_法国
+    type: vmess
+    server: 172.67.130.140
+    port: 2082
+    cipher: auto
+    uuid: 112ac36f-3f53-4e26-8371-d25c028e1b9a
     alterId: 0
     tls: false
     skip-cert-verify: true
@@ -151,24 +79,39 @@ proxies:
     ws-opts:
       path: /
       headers:
-        host: www.velvetmountain.shop
-  - &id011
+        host: s1c.v2.v001sss.xyz
+  - &id006
     name: 🇺🇸_US_美国->🇨🇦_CA_加拿大
     type: vmess
-    server: fbi.gov
+    server: yh2.freeh1.xyz
     port: 8080
     cipher: auto
-    uuid: 0a5903c5-0ff3-4d79-9420-2a966873f787
+    uuid: d9c5ec6a-a8d8-4732-8447-56fbd2f93e96
     alterId: 0
     tls: false
     skip-cert-verify: true
     network: ws
     ws-opts:
-      path: 0a5903c5-0ff3-4d79-9420-2a966873f787-vm
+      path: d9c5ec6a-a8d8-4732-8447-56fbd2f93e96-vm
       headers:
         host: pcs-referenced-camera-concerns.trycloudflare.com
-  - &id012
-    name: 🇺🇸_US_美国_5
+  - &id007
+    name: 🇺🇸_US_美国_3
+    type: vmess
+    server: 162.159.130.208
+    port: 8080
+    cipher: auto
+    uuid: 55021a7c-bd6c-418e-be95-ceac8ba27b45
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: 55021a7c-bd6c-418e-be95-ceac8ba27b45-vm
+      headers:
+        host: widescreen-instruction-breakdown-postage.trycloudflare.com
+  - &id008
+    name: 🇺🇸_US_美国_4
     type: vmess
     server: cloudflare.cfgo.cc
     port: 80
@@ -182,6 +125,90 @@ proxies:
       path: /
       headers:
         host: wap.hostmjj.com
+  - &id009
+    name: 🇺🇸_US_美国->🇷🇺_RU_俄罗斯联邦
+    type: trojan
+    server: 172.67.132.6
+    port: 2096
+    udp: true
+    password: 7b06d62b-25ed-45ed-ac0d-bc28a4779ef9
+    sni: channel.v2bamdad.tech
+    skip-cert-verify: true
+    network: grpc
+    grpc-opts:
+      grpc-service-name: lK1wclmJRbMxj4FxIzvwxUDoX
+  - &id010
+    name: 🇺🇸_US_美国_5
+    type: vmess
+    server: 104.21.54.252
+    port: 8080
+    cipher: auto
+    uuid: 22826b44-5c1a-4b4b-dbaa-83a2e8bd95f0
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: www.velvetmountain.shop
+  - &id011
+    name: 🇺🇸_US_美国_6
+    type: vmess
+    server: 162.159.134.23
+    port: 8080
+    cipher: auto
+    uuid: 9b196b50-37f2-4f4b-b175-06273adc6207
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: 9b196b50-37f2-4f4b-b175-06273adc6207-vm
+      headers:
+        host: championship-bidding-oxygen-brochure.trycloudflare.com
+  - &id012
+    name: 🇨🇦_CA_加拿大->🇺🇸_US_美国
+    type: trojan
+    server: 23.227.38.11
+    port: 443
+    udp: true
+    password: b17fa17d-13a0-4e8a-a398-8e549ea8b208
+    sni: syndication-statutes-wanted-logo.trycloudflare.com
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /argox-tr
+  - &id013
+    name: 🇺🇸_US_美国->🇩🇪_DE_德国_2
+    type: vmess
+    server: de-01.cloudlion.me
+    port: 8080
+    cipher: auto
+    uuid: 70666776-4e9f-4350-b3f0-afaff6a70db0
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: de-01.cloudlion.me
+  - &id014
+    name: 🇺🇸_US_美国_7
+    type: vmess
+    server: 172.67.143.192
+    port: 8080
+    cipher: auto
+    uuid: 22826b44-5c1a-4b4b-dbaa-83a2e8bd95f0
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: www.velvetmountain.shop
 proxy-groups:
   - name: PROXY
     type: select
@@ -220,6 +247,8 @@ proxy-groups:
       - *id010
       - *id011
       - *id012
+      - *id013
+      - *id014
   - name: LOAD-BALANCE
     type: load-balance
     url: http://www.gstatic.com/generate_204
@@ -237,6 +266,8 @@ proxy-groups:
       - *id010
       - *id011
       - *id012
+      - *id013
+      - *id014
   - name: SELECT
     type: select
     proxies:
@@ -252,6 +283,8 @@ proxy-groups:
       - *id010
       - *id011
       - *id012
+      - *id013
+      - *id014
 rules:
   - RULE-SET,applications,DIRECT
   - DOMAIN,clash.razord.top,DIRECT
